                          WebAuth Change History

WebAuth 3.1.2 (in progress)

 *) Expanded the libgcc linking hack to apply to all of the module builds
    rather than just the cURL link flags, since it showed up on Solaris 7
    affecting mod_webauthldap as well.  This fix is specific to Solaris.

 *) Fixed the installation rule for the test suite to properly honor
    DESTDIR.

WebAuth 3.1.1 (2003-05-08)

 *) Fixed HTML_TEMPLATE_ROOT in src/webkdc/logout.fcgi script by
    changing the path to relative instead of absolute.

WebAuth 3.1.0 (2003-05-01)

 *) Add WebAuthSSLRedirect and WebAuthSSLRedirectPort directives to
    enable redirecting of users from http to https when accessing
    a WebAuth-protected resource.

 *) Add WebAuthWebKdcSSLCertCheck directive to enable/disable checking
    of the WebKDC SSL certificate. Defaults to "on" and should only
    be turned off for debugging/testing purposes.

 *) Added mod_webauthldap for LDAP directory information lookups via
    Kerberos v5 GSS-API binds.

 *) Add new WebAuthDontCache directive which sets r->no_cache. Defaults
    to 0 (allow documents to be cached).

 *) Allow these directives to present in .htaccess files (they were
    previously only allowed in <Directory>/<Location> directives):

    WebAuthExtraRedirect
    WebAuthReturnURL
    WebAuthLoginCanceledURL
    WebAuthVarPrefix

 *) Add more backward compatibility support for WebAuth 2.5 by allowing
    the following directives to appear in .htaccess files:

    StanfordAuthConfirmMsg  -> ignored

    StanfordAuthDoConfirm   -> warns to error_log if set to on

    StanfordAuthDontCache   -> maps to WebAuthDontCache. If AuthType
                               is set to StanfordAuth, defaults to 1.

    StanfordAuthForceReload -> maps to WebAuthExtraRedirect

    StanfordAuthLife        -> maps to WebAuthAppTokenLifetime and enables
                               WebAuthForceLogin

    StanfordAuthReturnURL   -> maps to WebAuthReturnURL
