@@ -2,6 +2,13 @@
 
 WebAuth 3.1.2 (in progress)
 
+ *) modify wa_keyring to not use getopt (not available on windows),
+    and change strftime format from %T to %H:%M:%S (%T also not available
+    on windows strftime)
+
+ *) fix bug in libwebauth/krb5.c where we would try to call krb5_free_context
+    on a NULL context
+
  *) Expanded the libgcc linking hack to apply to all of the module builds
     rather than just the cURL link flags, since it showed up on Solaris 7
     affecting mod_webauthldap as well.  This fix is specific to Solaris.
